syntax = "proto3";

// proto的包名，给别的proto文件import该文件时使用
package hellogo.api.chat;

// ;分号前的路径为生成的pb文件的相对路径，会被命令行的go_out参数覆盖;分号后为包名
option go_package = "hellogo/api/chat;chatpb";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";

message User {
    int64  id   = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
    string name = 2;
    int64  age  = 3;
}

service ChatService {
    rpc GetUser(GetUserRequest) returns (User) {
        option (google.api.http) = {
            get: "/chat/users/{id}"
        };
    }

    rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse) {
        option (google.api.http) = {
            get: "/chat/users/search/{name}"
        };
    }

    rpc CreateUser(CreateUserRequest) returns (User) {
        option (google.api.http) = {
            post: "/chat/users"
            body: "user"
        };
    }

    rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/chat/users/{id}"
        };
    }

    rpc Ask(AskRequest) returns (AskResponse) {
        option (google.api.http) = {
            post: "/chat/users/{id}/ask"
            body: "*"
        };
    }
}

message GetUserRequest {
    int64 id = 1;
}

message SearchUsersRequest {
    string name = 1;
}

message SearchUsersResponse {
    repeated User users = 1;
}

message CreateUserRequest {
    User user = 1;
}

message DeleteUserRequest {
    int64 id = 1;
}

message AskRequest {
    int64 id = 1;
    int64 n  = 2;
}

message AskResponse {
    string text = 1;
}
